# futurehub-web-backend

./: .gitignore  Cargo.toml  Rocket.toml  Rocket.toml.sample  devel-run.sh  diesel.toml  futurehub-web-backend.service
doc/: specs.md
migrations/2021-01-25-224845_events/: up.sql
migrations/2021-02-28-042400_create_posts/: up.sql
migrations/2021-03-10-133851_create_repo/: down.sql  up.sql
migrations/2021-04-13-202536_create_users/: down.sql  up.sql
migrations/2021-05-06-093835_create_courses/: down.sql  up.sql
migrations/2021-05-13-092351_create_attendees/: up.sql
migrations/2022-02-13-132445_create_consent_table/: down.sql  up.sql
src/: lib.rs
src/cli/: event.rs  menu.rs  mod.rs  post.rs
src/cli/category/: create.rs  dropall.rs  edit.rs  list.rs  mod.rs  remove.rs
src/cli/course/: certform.rs  certs.rs  create.rs  dropall.rs  edit.rs  event.rs  list.rs  mod.rs  participant.rs  remove.rs
src/cli/event/: attendee.rs  create.rs  dropall.rs  edit.rs  export_csv.rs  export_pdf.rs  import.rs  list.rs  mod.rs  remove.rs
src/cli/post/: create.rs  dropall.rs  edit.rs  list.rs  (+2 more)
src/consts/: messages.rs
src/db/: category.rs  event.rs  login_history.rs  mod.rs  model_traits.rs  models.rs  post.rs  repo_items.rs  sqlite_schema.rs  user.rs
src/rest/: auth.rs  category.rs  common.rs  consent.rs  contact.rs  courses.rs  events.rs  jwt.rs  mod.rs  posts.rs  profile.rs  repo.rs  response.rs  signup.rs  users.rs
src/services/: mail.rs
src/tools/: cli_edit.rs  config.rs  export.rs  filehash.rs  import.rs  latex.rs  mod.rs  pdflatex.rs  text.rs
templates/tex/: address_tezaurus.txt  fhk-calendar-a3.hbs  fhk-cert-1-1-1-a4.hbs  fhk-cert-1-1-2-a4.hbs  fhk-cert-1-1-3-a4.hbs  fhk-cert-1-1-4-a4.hbs  fhk-cert-1-1-5-a4.hbs  fhk-cert-1-2-1-a4.hbs  fhk-cert-1-2-2-a4.hbs  fhk-cert-1-2-3-a4.hbs  fhk-cert-1-2-4-a4.hbs  fhk-cert-1-3-1-a4.hbs  fhk-cert-1-3-2-a4.hbs  fhk-cert-1-3-3-a4.hbs  fhk-cert-1-3-4-a4.hbs  fhk-cert-2-1-1-a4.hbs  fhk-cert-2-1-2-a4.hbs  fhk-cert-2-2-1-a4.hbs  fhk-cert-2-3-1-a4.hbs  fhk-cert-3-4-1-a4.hbs  fhk-cert-3-4-10-a4.hbs  fhk-cert-3-4-11-a4.hbs  fhk-cert-3-4-12-a4.hbs  fhk-cert-3-4-2-a4.hbs  fhk-cert-3-4-3-a4.hbs  fhk-cert-3-4-4-a4.hbs  fhk-cert-3-4-5-a4.hbs  fhk-cert-3-4-6-a4.hbs  fhk-cert-3-4-7-a4.hbs  fhk-cert-3-4-8-a4.hbs  fhk-cert-3-4-9-a4.hbs  fhk-cert-5-4-1-a4.hbs  fhk-cert-5-4-2-a4.hbs  fhk-cert-5-4-3-a4.hbs  fhk-cert-5-4-4-a4.hbs  fhk-potpisna-lista.hbs  popis-polaznika.hbs  zapisnik-o-primopredaji.hbs
(+27 files in other folders)
