[package]
name = "futurehub_web_backend"
version = "0.1.0"
authors = ["Andrej Dundovic <andrej@dundovic.com.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
toml = "0.5.8"
diesel = { version = "1.4.1", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
