[package]
name = "futurehub_web_backend"
version = "0.1.0"
authors = ["Andrej Dundovic <andrej@dundovic.com.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
csv = "1.1"
toml = "0.5.8"
clap = "3.0.0"
edit = "0.1.3"
deunicode = "1.1.1"
diesel = { version = "1.4.1", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
serde_derive = "1.0.123"
lettre = { version = "0.10.0-rc.3", features = ["rustls-tls"] }
handlebars = "4.3"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
sha2 = "0.10.1"
data-encoding = "2.3.2"
ring = "0.16.20"
tex_tmpl_rs = "0.1"
image = "0.24.0"
rand = "0.8.4"
base16ct = { version = "0.1.1", features = ["alloc"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_sqlite_pool"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]
